IntelliJ migration for Java 9
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>